--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,4 @@
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
