--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,9 @@
+name = "MaximinOPF"
+uuid = "9a7b7887-c5ce-4a33-a17b-c1c258e18085"
+authors = ["Sam <yim@anl.gov>"]
+version = "0.1.0"
+
 [deps]
-Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
-Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-MathOptFormat = "f4570300-c277-12e8-125c-4912f86ce65d"
-Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
-SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
