--- a/Project.toml
+++ b/Project.toml
@@ -6,4 +6,6 @@ version = "0.1.0"
 [deps]
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
+MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
