--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Sam <yim@anl.gov>"]
 version = "0.1.0"
 
 [deps]
+Dualization = "191a621a-6537-11e9-281d-650236a99e60"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
