--- a/Project.toml
+++ b/Project.toml
@@ -11,4 +11,5 @@ MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
 MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
+SCIP = "82193955-e24f-5292-bf16-6f2c5261a85f"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
