--- a/Project.toml
+++ b/Project.toml
@@ -13,3 +13,14 @@ MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 SCIP = "82193955-e24f-5292-bf16-6f2c5261a85f"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
+
+
+[compat]
+Dualization = "= 0.3.0"
+JuMP = "= 0.21.2"
+MathOptInterface = "= 0.9.13"
+Mosek = "= 1.1.1"
+MosekTools = "= 0.9.2"
+PowerModels = "= 0.15.4"
+SCIP = "= 0.9.1"
+TimeZones = "= 1.0.0"
