relax package compat checks

--- a/Project.toml
+++ b/Project.toml
@@ -13,9 +13,9 @@ SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 
 [compat]
-Dualization = "= 0.3.0"
-JuMP = "= 0.21.2"
-MathOptInterface = "= 0.9.13"
-PowerModels = "= 0.15.4"
-TimeZones = "= 1.0.0"
+Dualization = ">= 0.3.0"
+JuMP = ">= 0.21.2"
+MathOptInterface = ">= 0.9.13"
+PowerModels = ">= 0.15.4"
 SCS = ">= 0.6.6 "
+TimeZones = ">= 1.0.0"
