--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "MaximinOPF"
 uuid = "9a7b7887-c5ce-4a33-a17b-c1c258e18085"
-authors = ["Sam <yim@anl.gov>"]
+authors = ["Kibaek Kim <kimk@anl.gov>"]
 version = "0.1.1"
 
 [deps]
