--- a/Project.toml
+++ b/Project.toml
@@ -12,9 +12,9 @@ PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 
 [compat]
-julia = ">= 1.2.0"
-Dualization = ">= 0.3.0"
-JuMP = ">= 0.21.2"
-MathOptInterface = ">= 0.9.13"
-PowerModels = ">= 0.15.4"
-TimeZones = ">= 1.0.0"
+julia = "^1.2.0"
+Dualization = "^0.3.0"
+JuMP = "^0.21.2"
+MathOptInterface = "^0.9.13"
+PowerModels = "^0.15.4"
+TimeZones = "^1.0.0"
